schema/testdata/validation_relationships_one_to_many_unmatched_relation_to_many_side/schema.keel
model Author {
    fields {
        written Post @relation(author)
        written2 Post @relation(author)
        written3 Post
    }
}

model Post {
    fields {
        author Author[]
    }
}
