schema/testdata/errors/relationships_one_to_many_unmatched_relation_to_many_side.keel
model Author {
    fields {
        written Post @relation(author)
        //expect-error:9:17:RelationshipError:Cannot associate with repeated field 'author' on Post to form a one to many relationship because it is already associated with field 'written'
        written2 Post @relation(author)
        written3 Post
    }
}

model Post {
    fields {
        author Author[]
    }
}
